--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -9,6 +9,11 @@ $color-grey-light-2: #aaa;
 
 $color-grey-dark-1: #54483A;
 $color-grey-dark-2: #6D5D4B;
+$bp-largest: 75em;
+$bp-large: 62.5em;
+$bp-medium: 50em;
+$bp-small:37.5em;
+
 
 // FONT VARIABLES
 $font-primary: 'Nunito', sans-serif;
@@ -23,6 +28,9 @@ $font-display: 'Josefin Sans', sans-serif;
 html{
     box-sizing: border-box;
     font-size: 62.5%;
+    @media only screen and(max-width: $bp-largest){
+        font-size: 50%;
+    }
 }
 body{
     font-family: $font-primary;
@@ -34,5 +42,12 @@ body{
     display: grid;
     grid-template-rows: 80vh min-content 40vw repeat(3, min-content); 
     grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem,1fr) [center-start] repeat(  8,[col-start]  minmax(min-content,14rem) [col-end]) [center-end] minmax(6rem,1fr) [full-end];
-    
+    @media only screen and(max-width: $bp-large){
+    grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content); 
+    grid-template-columns:[sidebar-end full-start] minmax(6rem,1fr) [center-start] repeat(  8,[col-start]  minmax(min-content,14rem) [col-end]) [center-end] minmax(6rem,1fr) [full-end];
+    }
+    @media only screen and(max-width: $bp-medium){
+        grid-template-rows: 6rem calc(100vh - 6rem); 
+       
+        }
 }
